--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
           Frontend Mentor</a
         >.
       </div>
-      <div>Coded by <a href="https://naijamesz.github.io" target="_blank"> </a>. James Thanawat</div>
+      <div>
+        Coded by <a href="https://github.com/naijamesz/NFT-preview-card-Frontend-mentor" target="_blank"> </a>. James
+        Thanawat
+      </div>
     </footer>
   </body>
 </html>
