--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://github.com/naijamesz/NFT-preview-card-Frontend-mentor/blob/master/images/favicon-32x32.png?raw=true" />
 
     <title>Frontend Mentor | NFT preview card component</title>
     <link rel="stylesheet" href="./css/style.css" />
@@ -24,9 +28,22 @@
     <main class="card-wrapper">
       <div class="card">
         <div class="card-img">
-          <img src="images\image-equilibrium.jpg" class="card-img-top" alt="" aria-hidden="true" />
+          <img
+            src="https://github.com/naijamesz/NFT-preview-card-Frontend-mentor/blob/master/images/image-equilibrium.jpg?raw=true"
+            class="card-img-top"
+            alt=""
+            aria-hidden="true" />
           <div class="card-img-overlay">
-            <img src="images\icon-view.svg" />
+            <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
+              <g fill="none" fill-rule="evenodd">
+                <path d="M0 0h48v48H0z" />
+                <path
+                  d="M24 9C14 9 5.46 15.22 2 24c3.46 8.78 12 15 22 15 10.01 0 18.54-6.22 22-15-3.46-8.78-11.99-15-22-15Zm0 25c-5.52 0-10-4.48-10-10s4.48-10 10-10 10 4.48 10 10-4.48 10-10 10Zm0-16c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Z"
+                  fill="#FFF"
+                  fill-rule="nonzero" />
+              </g>
+            </svg>
+            <!-- <img src="images\icon-view.svg" /> -->
           </div>
         </div>
         <div class="card-title card-title-overlay">
@@ -38,13 +55,23 @@
         <div class="card-meta">
           <div class="left">
             <span>
-              <img src="images/icon-ethereum.svg" alt="icon-ethereum" width="11" hieght="18" />
+              <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z"
+                  fill="#00FFF8" />
+              </svg>
+              <!-- <img src="images/icon-ethereum.svg" alt="icon-ethereum" width="11" hieght="18" /> -->
             </span>
             <p>0.041 ETH</p>
           </div>
           <div class="right">
             <span>
-              <img src="images\icon-clock.svg" alt="icon-clock" width="17" height="17" />
+              <svg width="17" height="17" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z"
+                  fill="#8BACD9" />
+              </svg>
+              <!-- <img src="images\icon-clock.svg" alt="icon-clock" width="17" height="17" /> -->
             </span>
             <p>3 days left</p>
           </div>
@@ -52,7 +79,9 @@
         <div class="card-seperator"></div>
         <div class="card-creator">
           <div class="card-creator-avator">
-            <img src="images\image-avatar.png" alt="" />
+            <img
+              src="https://github.com/naijamesz/NFT-preview-card-Frontend-mentor/blob/master/images/image-avatar.png?raw=true"
+              alt="image-avatar" />
           </div>
           <div class="card-creator-details">
             <span>Creation of</span>
